--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </ol>
   </div>
   <h3> Add Items To Your List</h3>
-  <form>
+  <form id="adds">
     <label form="item" name="item"><input type="text" id="item">
     <input type="submit" value="submit">
   </form>
